# rf-passive-recorder

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yml  constraints.txt  install.sh  pyproject.toml  requirements.txt  setup_rfpr_docker.sh  uninstall_rfpr_docker.sh
config/: settings.example.yaml  settings.yaml
docs/: docker-deployment.md
src/rf_passive_recorder/: __init__.py  api.py  artifacts.py  cli.py  clustering.py  config.py  dsp.py  exporter.py  features.py  heuristics.py  logging_setup.py  main.py  models.py  ring_buffer.py  rtl_capture.py  service.py  storage.py  synthetic.py  trigger.py  utils.py
systemd/: rf-passive-recorder.service
tests/: test_clustering.py  test_features.py  test_heuristics.py  test_models.py  test_rtl_capture.py  test_storage.py  test_synthetic_signals.py
